rWind v1.1.6 (Release date: 2021-02-07)
==============

o email address for maintainer changed

o uv2ds manual page chaged

rWind v1.1.5 (Release date: 2019-07-31)
==============

o fixed wind.dl and wind.dl_2. (URL to server correction)

rWind v1.1.4 (Release date: 2019-07-31)
==============

o fixed cost.FMGS function to deal with NAs

rWind v1.1.3 (Release date: 2019-07-24)
==============

o fixing details for CRAN submission

rWind v1.1.2 (Release date: 2019-07-20)
==============

o fixed some documentary issues with the new functions

o changed from "wind.direction" and "wind.speed" to "direction" and "speed"

rWind v1.1.1 (Release date: 2018-12-20)
==============

o added a new function seaScud.dl() to download sea current data from SCUD

o added a new internal function to manage SCUD data scud.fit_int()


rWind v1.1.0 (Release date: 2018-12-17)
==============

o added a new function seaOscar.dl() to download sea current data from OSCAR

o added a new internal function to manage OSCAR data oscar.fit_int()


rWind v1.0.4 (Release date: 2018-11-09)
==============

o fixed bug in wind.dl_2 (wind.fit_int)

rWind v1.0.3 (Release date: 2018-10-23)
==============

o function cost.FMGS (Felicísimo et al. 2008) is now defined outside of

  flow.dispersion

o new vignette


rWind v1.0.0 (Release date: 2018-06-30)
==============

Changes:

o wind.dl_2 can be used with a time series.

o wind.fit is deleted and integrated in wind.dl.

o wind2raster is adapted to work with lists.

o flow.dispersion is adapted to work with lists.


rWind v0.4.2 (Release date: 2018-05-1)
==============

Changes:

o wind.dl returns now a "rWind data.frame" object.

o wind.fit returns now a "rWind data.frame" object.

o wind2raster returns by default a "RasterStack" object with two raster layers: wind.direction and wind.speed.

o flow.dispersion takes now as an input a RasterStack produced by wind2raster with wind.direction and wind.speed layers.
